<?xml version="1.0"?>
<package format="2">
    <name>object_manipulation_planner</name>
    <version>0.0.0</version>
    <description>The object_manipulation_planner package</description>
    <author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>moveit_core</depend>
    <depend>moveit_ros_planning</depend>
    <depend>roscpp</depend>
    <depend>sbpl_collision_checking</depend>
    <depend>smpl</depend>
    <depend>smpl_moveit_interface</depend>
    <depend>smpl_ros</depend>
</package>

